--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'styles/main.css' %}">
   <title>{% block title %} {% endblock title %}</title>
 </head>
 <body>
+  {% include 'navbar.html' %}
   {% block content %}
 
 
