Create the navigation bar

--- a/flashcard/templates/flashcards/conf/credit.html
+++ b/flashcard/templates/flashcards/conf/credit.html
@@ -21,6 +21,11 @@
     <p> Catalin Fertu</p>
     <p>search icon</p>
   </div>
+    <div>
+    <p>Pixel perfect, SeyfDesigner</p>
+    <p>add icon</p>
+  </div>
+
 
 
 
