--- a/flashcard/templates/flashcards/home.html
+++ b/flashcard/templates/flashcards/home.html
@@ -1,11 +1,17 @@
 {% extends 'main.html' %}
+{% load static %}
+
 {% block title %}
   Homepage
 {% endblock title %}
 
+{% if request.user.prefers_dark_theme == True %}
+    {% block link_css %} {% static 'styles/main_dark.css' %} {% endblock link_css %}
+{% endif %}
+
 <!--the content start here-->
 {% block content %}
-  <p>What?</p>
+
 
 
 {% endblock content %}
