--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+
+  {% comment %} for dark theme {% endcomment %}
+  <link rel="stylesheet" href="{% block link_css %} {% endblock link_css%}">
+
   <title>{% block title %} {% endblock title %}</title>
 </head>
 <body>
