Create login functionality

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,18 +1,31 @@
 :root {
+
+    /*For dark theme*/
+    --search-form-light-background: rgba(120, 131, 155, 0.2);
+    --logo-font-light-color: #fff;
+    --background-color: rgb(35, 39, 47);
+    --text-color-light: #fff;
+    --search-button-light-color: #000;
+    --search-form-button-color: invert(100%);
+    --box-shodow-color: rgb(77, 77, 77);
+    /*Login button */
+    --login-button-background: #fff;
+    --login-button-background-hover: linear-gradient(to top, #00d2ff, #3a7bd5);
+
     /*All search things*/
-    --search-button-light-color: #f4f5f7;
-    --search-form-button-color: invert(0%);
-    --search-form-light-background: #f4f5f7;
+    /*--search-button-light-color: #f4f5f7;*/
+    /*--search-form-button-color: invert(0%);*/
+    /*--search-form-light-background: #f4f5f7;*/
     --search-form-border-radius: 40px;
     --search-form-border-hover: transparent;
 
     /*All logo things*/
-    --logo-font-light-color: #000;
+    /*--logo-font-light-color: #000;*/
 
     /*All general things*/
-    --text-color-light: #000;
-    --background-color: #fff;
-    --box-shodow-color: rgb(87, 85, 85);
+    /*--text-color-light: #000;*/
+    /*--background-color: #fff;*/
+    /*--box-shodow-color: rgb(87, 85, 85);*/
 
     
 
@@ -31,6 +44,7 @@
 
 body {
     background-color: var(--background-color);
+    transition: background-color 0.5s ease;
 }
 
 /*General navigation*/
@@ -161,4 +175,24 @@ nav .user {
     align-items: center;
 }
 
+nav .user .login-button a button {
+    width: 50px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
+    background-color: var(--login-button-background);
+    transition: transform 200ms ease-in-out, background 500ms ease-in-out;
+}
 
+nav .user .login-button a button:hover {
+    transform: translate(-2px, -3px);
+    background-color: #00d2ff;
+    background: var(--login-button-background-hover);
+}
+
+nav .user .login-button a button:active {
+    transform: translate(1px, 1px);
+    background-color: #00d2ff;
+    background: var(--login-button-background-hover);
+}
