--- a/templates/main.html
+++ b/templates/main.html
@@ -15,16 +15,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'styles/main.css' %}">
-
-  {% comment %} for dark theme {% endcomment %}
-  <link rel="stylesheet" href="{% block link_css %} {% endblock link_css%}">
-
+{#    For custom css file#}
+    {% block css_file %} {% endblock css_file %}
   <title>{% block title %} {% endblock title %}</title>
 </head>
 <body>
   {% include 'navbar.html' %}
   {% block content %}
-
 
 
   {% endblock content %}
