--- a/flashcard/templates/flashcards/conf/settings.html
+++ b/flashcard/templates/flashcards/conf/settings.html
@@ -1,3 +1,43 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block title %} Settings {% endblock title %}
+{% block css_file %} <link rel="stylesheet" href="{% static 'styles/settings.css' %}"> {% endblock css_file %}
+{% block content %}
+    <div class="settings-page">
+        <div class="user-settings">
+            <div class="header">
+            <p>User Settings</p>
+            <hr>
+            </div>
+            <div class="user-settings-body">
+                <form action="" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+
+                    {% for field in form %}
+                        <div class="form-group">
+                            <label>{{ field.label }}</label>
+                            {{ field }}
+                        </div>
+                    {% endfor %}
+
+                    <div class="form-action">
+                        <button class="btn btn--main" type="submit">Update</button>
+                    </div>
+
+                </form>
+
+
+            </div>
+
+
+
+
+
+        </div>
+    </div>
+
+
+
+
+
+{% endblock content %}
