--- a/static/styles/main_dark.css
+++ b/static/styles/main_dark.css
@@ -1,3 +1,187 @@
 :root {
 
+    /*For dark theme*/
+    --search-form-light-background: rgba(120, 131, 155, 0.2);
+    --logo-font-light-color: #fff;
+    --background-color: rgb(35, 39, 47);
+    --text-color-light: #fff;
+    --search-button-light-color: #000;
+    --search-form-button-color: invert(100%);
+    --box-shodow-color: rgb(77, 77, 77);
+
+    /*Login button */
+    --login-button-background: #fff;
+    --login-button-background-hover: linear-gradient(to top, #00d2ff, #3a7bd5);
+
+    /*All search things*/
+    --search-form-border-radius: 40px;
+    --search-form-border-hover: transparent;
+
+
+}
+
+@font-face {
+    font-family: Teko;
+    src: url("static/fonts/Teko-Regular.ttf") format("truetype");
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: var(--background-color);
+    transition: background-color 0.5s ease;
+}
+
+/*General navigation*/
+
+nav {
+    height: 56px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    /*flex: 1 1 95%*/
+    padding: 2rem;
+}
+
+/*the logo*/
+nav .logo a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    color: var(--logo-font-light-color);
+    font-family: "Teko", "Jetbrains Mono", serif;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+nav .logo a .logo-image {
+    height: 45px;
+}
+
+/*the middle search*/
+nav .search {
+    height: 50px;
+    display: flex;
+    flex: 1 1 300px;
+    flex-basis: 200px;
+    max-width: 520.8px;
+
+}
+
+/*search's form*/
+nav .search form {
+    height: 50px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*input in search*/
+nav .search form input.input {
+    outline: none;
+    border: none;
+    background-color: var(--search-form-light-background);
+    font-family: "Segoe UI", "JetBrains Mono", serif;
+    border-radius: var(--search-form-border-radius) 0 0 var(--search-form-border-radius);
+    padding: 10px;
+    height: 40px;
+    flex: 1;
+    margin-right: 0;
+
+    transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+
+}
+
+nav .search form input.input:hover {
+    box-shadow: 1px 1px 3px var(--box-shodow-color);
+}
+
+nav .search form input.input:hover ~ button.search-logo {
+    box-shadow: 1px 1px 3px var(--box-shodow-color);
+}
+
+button.search-logo:hover{
+    box-shadow: 1px 1px 3px var(--box-shodow-color);
+}
+
+
+/*div outside search icon*/
+nav .search button {
+    height: 40px;
+    width: 50px;
+    background-color: var(--search-form-light-background);
+    border-radius: 0 var(--search-form-border-radius) var(--search-form-border-radius) 0;
+    border: none;
+    margin-right: 0;
+    transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+
+}
+
+/*search svg*/
+nav .search div .search-logo {
+    height: 24px;
+    width: 24px;
+}
+
+nav .search data .search-logo .search-logo-image {
+    filter: invert(100%);
+}
+
+/*user div*/
+nav .user{
+    display: flex;
+    gap: 1rem;
+}
+
+
+.avatar-image:hover .user-name-score-div{
+    transform: translate(-100px);
+    font-size: 15px;
+    visibility: visible;
+}
+
+
+/*user avatar*/
+nav .user .avatar a .avatar-image {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    z-index: 343;
+
+}
+
+nav .user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav .user .login-button a button {
+    width: 50px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
+    background-color: var(--login-button-background);
+    transition: transform 200ms ease-in-out, background 500ms ease-in-out;
+}
+
+nav .user .login-button a button:hover {
+    transform: translate(-2px, -3px);
+    background-color: #00d2ff;
+    background: var(--login-button-background-hover);
+}
+
+nav .user .login-button a button:active {
+    transform: translate(1px, 1px);
+    background-color: #00d2ff;
+    background: var(--login-button-background-hover);
 }
