--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+  <link rel="stylesheet" href="{% static 'styles/main_dark.css' %}">
 {#    For custom css file#}
     {% block css_file %} {% endblock css_file %}
   <title>{% block title %} {% endblock title %}</title>
