--- a/static/styles/main_dark.css
+++ b/static/styles/main_dark.css
@@ -20,10 +20,55 @@
 
 }
 
+/* Style the selected text */
+::selection {
+  background-color: #ffcc00;
+  color: #000000;
+}
+
+
+/* Add animation to the selected text */
+@keyframes selectionAnimation {
+  0% { background-color: #ffcc00; }
+  50% { background-color: #ffffff; }
+  100% { background-color: #ffcc00; }
+}
+
+/* Apply animation to the selected text */
+::selection {
+  animation-name: selectionAnimation;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
 @font-face {
     font-family: Teko;
     src: url("static/fonts/Teko-Regular.ttf") format("truetype");
 }
+
+/*The scrollbar*/
+::-webkit-scrollbar {
+    width: 5px;
+    transition: all 300ms ease-in-out;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+
+
+
+
 
 * {
     padding: 0;
@@ -34,7 +79,21 @@
 body {
     background-color: var(--background-color);
     transition: background-color 0.5s ease;
+
+/*    For FireFox scrollbar*/
+    scroll-behavior: smooth;
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
 }
+
+body::-webkit-scrollbar-thumb {
+    background-color: #888;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
 
 /*General navigation*/
 
@@ -185,3 +244,41 @@ nav .user .login-button a button:active {
     background-color: #00d2ff;
     background: var(--login-button-background-hover);
 }
+
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(0px);
+  } 100% {
+        opacity: 1;
+        transform: translateX(-50px);
+    }
+}
+
+@keyframes slideOut {
+    0% {
+        opacity: 1;
+        transform: translateX(-50px);
+    } 100% {
+              opacity: 0;
+              transform: translateX(0px);
+          }
+}
+
+.welcome-animation {
+    position: absolute;
+    color: #ffff;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
+    z-index: -10;
+    font-size: 0.9rem;
+    transform: translate(0px, 0px);
+    opacity: 0;
+    animation-name: slideIn, slideOut;
+    animation-delay: 0.0s, 1.4s;
+    animation-duration: 0.3s, 0.3s;
+    animation-timing-function: linear, ease-out;
+    animation-iteration-count: 1, 1;
+    animation-fill-mode: forwards;
+}
+
