--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -9,11 +9,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 3rem;
+    padding: 2rem;
 }
 
 .settings-page div {
-    /*width: 30%;*/
+    /*width: 400px;*/
 }
 
 
@@ -39,7 +39,7 @@
     justify-content: center;
     align-items: baseline;
     gap: 2rem;
-    width: 400px;
+    width: 500px;
 }
 
 .settings-page div div form div {
@@ -118,6 +118,67 @@
 }
 
 
-.settings-page div div form {
-    margin-bottom: 2rem;
+.settings-page div div form div.form-group {
+    margin-bottom: 1.2rem;
+}
+
+#id_education {
+    border-radius: 5px;
+    border: none;
+    height: 30px;
+    width: 10rem;
+    padding: 4px;
+    transition: all 0.3s ease;
+}
+
+#id_education:focus {
+    outline: none;
+}
+
+option:checked {
+    background-color: #00d2ff;
+    color: white;
+}
+
+option:not(:checked) {
+    color: white;
+}
+
+
+#id_education option {
+    background-color: #343434;
+    border-radius: 5px;
+    color: white;
+}
+
+.current-image {
+    width: 200px;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.update-button {
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
+    padding: 5px;
+    background: #ffff;
+    width: 100%;
+
+}
+
+.form-action {
+    position: sticky;
+    bottom: 10px;
+    z-index: 1;
+}
+
+a {
+    color: #00d2ff;
+    transition: all 300ms ease-in-out;
+}
+
+a:hover {
+    color: greenyellow;
 }
