--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -13,7 +13,7 @@
 }
 
 .settings-page div {
-    /*width: 400px;*/
+    width: 400px;
 }
 
 
@@ -129,6 +129,7 @@
     width: 10rem;
     padding: 4px;
     transition: all 0.3s ease;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
 }
 
 #id_education:focus {
@@ -149,6 +150,7 @@ option:not(:checked) {
     background-color: #343434;
     border-radius: 5px;
     color: white;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
 }
 
 .current-image {
@@ -181,4 +183,33 @@ a {
 
 a:hover {
     color: greenyellow;
+}
+
+.misc {
+    margin-top: 2rem;
+    width: 100%;
+
+}
+
+.misc div div {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.misc div div p.logout-paragraph {
+    font-size: 1.1rem;
+}
+
+.misc div div button {
+    height: 40px;
+    width: 100px;
+    background-color: #e81d1d;
+    border-radius: 5px;
+    border: none;
+    font-size: 1rem;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
+    color: white;
+
 }
