--- a/static/styles/main_dark.css
+++ b/static/styles/main_dark.css
@@ -154,9 +154,9 @@ nav .search form input.input {
     height: 40px;
     flex: 1;
     margin-right: 0;
-
+    color: #ffff;
     transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
-
+    
 }
 
 nav .search form input.input:hover {
@@ -191,7 +191,8 @@ nav .search div .search-logo {
 }
 
 nav .search data .search-logo .search-logo-image {
-    filter: invert(100%);
+    height: 24px;
+    width: 24px;
 }
 
 /*user div*/
