Create Notes, ToDo, and a little bit of Subject-list

--- a/flashcard/templates/flashcards/conf/credit.html
+++ b/flashcard/templates/flashcards/conf/credit.html
@@ -21,10 +21,15 @@
     <p> Catalin Fertu</p>
     <p>search icon</p>
   </div>
-    <div>
+    <<div>
     <p>Pixel perfect, SeyfDesigner</p>
     <p>add icon</p>
   </div>
+   div>
+    <p>joalfa</p>
+    <p>close icon</p>
+  </div>
+
 
 
 
