--- a/flashcard/templates/flashcards/components/todo.html
+++ b/flashcard/templates/flashcards/components/todo.html
@@ -1,16 +1,15 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'styles/components/todo.css' %}">
 <div class="to-do-container container">
-    <div class="to-do-header header">Todo <hr></div>
+  <a href="{% url 'create_todo' %}"><div class="to-do-header header">Todo <hr></div></a>
 
     <div class="to-do-body body">
         {% for element in todo %}
             <div class="todo-element">
-                <label for="checkboxes" class="todo-element-paragraph">{{ element.task }}</label>
-                <input type="checkbox" id="checkboxes" class="todo-checkbox" data-todo-id="{{ element.id }}" {% if element.is_accomplished %} checked {% endif %} >
+                <a href="{% url 'delete_todo' element.id %}">
+                    <p class="todo-element-paragraph">{{ element.task }}</p>
+                </a>
             </div>
-
-
         {% endfor %}
     </div>
 </div>
