--- a/flashcard/templates/flashcards/registration/login_registration.html
+++ b/flashcard/templates/flashcards/registration/login_registration.html
@@ -20,7 +20,7 @@
                     <form action="" method="post">
                         {% csrf_token %}
                         <div>
-                            <label for="email">Username</label>
+                            <label for="email">Email</label>
                             <input type="text" name="email" id="email" required>
                         </div>
                         <div>
