Redirect the url back to where it came from

--- a/flashcard/templates/flashcards/components/create.html
+++ b/flashcard/templates/flashcards/components/create.html
@@ -17,7 +17,7 @@
     <div class="form">
       <form action="" method="post">
         {% csrf_token %}
-
+        <input type="hidden" value="{{ request.GET.next }}">
         {% for field in forms %}
           <div class="form-group">
             <label for="thing-label">{{ field.label }}</label>
