Give access to todo and notes in subject.html

--- a/flashcard/templates/flashcards/components/todo.html
+++ b/flashcard/templates/flashcards/components/todo.html
@@ -6,7 +6,7 @@
     <div class="to-do-body body">
         {% for element in todo %}
             <div class="todo-element">
-                <a href="{% url 'delete_todo' element.id %}">
+                <a href="{% url 'delete_todo' element.id %}?next_url={{ request.path|urlencode }}">
                     <p class="todo-element-paragraph">{{ element.task }}</p>
                 </a>
             </div>
