--- a/flashcard/templates/flashcards/important/subject_update.html
+++ b/flashcard/templates/flashcards/important/subject_update.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% load static   %}
-{% block title %} Create Subject {% endblock title %}
-{% block css_file %} <link rel="stylesheet" href="{% static 'styles/components/create_subject.css' %}"> {% endblock css_file %}
+{% block title %} Update Subject {% endblock title %}
+{% block css_file %} <link rel="stylesheet" href="{% static 'styles/important/subject_update.css' %}"> {% endblock css_file %}
 {% block content %}
 
   <div class="create-things-div">
@@ -22,6 +22,7 @@
             {{ field }}
           </div>
         {% endfor %}
+
           <input type="submit" value="Submit" class="submit-button">
 
       </form>
