--- a/static/styles/components/create_subject.css
+++ b/static/styles/components/create_subject.css
@@ -33,7 +33,7 @@
     height: 40px;
     border-radius: 5px;
     border: none;
-    padding: 5px;
+    padding: 1rem;
     font-size: 1rem;
     font-family: inherit;
 }
