--- a/static/styles/important/subject.css
+++ b/static/styles/important/subject.css
@@ -11,3 +11,44 @@
     flex-direction: column;
     gap: 1rem;
 }
+
+.right-subject {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.subject-container .right-subject .subject-info {
+    /*background-color: #e81d1d;*/
+    border-radius: 5px;
+    padding: 5px;
+    height: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+}
+
+.subject-container .right-subject .subject-info img {
+    height: 50px;
+    width: 50px;
+
+
+}
+
+
+.subject-container .right-subject .subject-info .empty-div {
+    height: 50px;
+    width: 50px;
+    background-color: white;
+    border-radius: 50%;
+
+
+}
+
+.topics-list {
+
+
+}
+
