--- a/static/styles/important/subject_update.css
+++ b/static/styles/important/subject_update.css
@@ -1,10 +1,10 @@
 .create-things-div {
     width: 100%;
-    height: 80vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
 }
 
 .form {
@@ -14,12 +14,13 @@
     padding: 15px;
     width: 40%;
     height: 80%;
+
 }
 
 .create-things-div .form form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
     width: 100%;
 
 }
@@ -38,25 +39,27 @@
     font-family: inherit;
 }
 
-.create-things-div .form form div select {
-   height: 30px;
-    border-radius: 5px;
+
+.create-things-div .form form div  input:active {
+    outline: none;
+}
+
+.create-things-div .form form div #id_picture::file-selector-button {
+    height: 30px;
     border: none;
+    border-radius: 5px;
+    font-family: "JetBrains Mono", "Segoe UI", serif;
     padding: 5px;
-    font-size: 1rem;
-    font-family: inherit;
+    background: #ffff;
+
+
 }
 
 
-.create-things-div .form form textarea {
-    height: 100px;
-    border-radius: 5px;
-    border: none;
-    padding: 1rem;
-    font-size: 1rem;
-    font-family: inherit;
-    resize: none
+.create-things-div .form form div #id_picture::file-selector-button:hover {
+    cursor: pointer;
 }
+
 
 .create-things-div .form form .submit-button {
     background-color: #ffffff;
@@ -64,6 +67,7 @@
     font-family: inherit;
     border: none;
     height: 30px;
+    margin-top: 30px;
 }
 
 
