--- a/static/styles/important/subject.css
+++ b/static/styles/important/subject.css
@@ -19,7 +19,7 @@
 }
 
 .subject-container .right-subject .subject-info {
-    /*background-color: #e81d1d;*/
+    background-color: #171616;
     border-radius: 5px;
     padding: 5px;
     height: 2rem;
