--- a/flashcard/templates/flashcards/important/subject_update.html
+++ b/flashcard/templates/flashcards/important/subject_update.html
@@ -13,7 +13,7 @@
             {% endif %}
         </div>
     <div class="form">
-      <form action="" method="post" enctype="multipart/form-data">
+      <form action="" method="post" enctype="multipart/form-data" class="update-form">
         {% csrf_token %}
 
         {% for field in forms %}
@@ -22,12 +22,16 @@
             {{ field }}
           </div>
         {% endfor %}
-
           <input type="submit" value="Submit" class="submit-button">
-
+      </form>
+      <form action="{% url 'delete_subject' subject_id=current_subject.id %}" method="post" class="delete-form">
+        {% csrf_token %}
+        <button type="submit" class="delete-button">Delete</button>
       </form>
 
     </div>
+
+
   </div>
 
 
