--- a/flashcard/templates/flashcards/important/topic.html
+++ b/flashcard/templates/flashcards/important/topic.html
@@ -1,2 +1,32 @@
 {% extends 'main.html' %}
+{% load static %}
 {% block title %} {{ current_topic.topic_name }} {% endblock title %}
+{% block css_file %} <link rel="stylesheet" href="{% static 'styles/important/topic.css' %}"> {% endblock css_file %}
+{% block content %}
+
+  <div class="topic-container">
+
+    <div class="left-topic">
+      {% include 'flashcards/components/todo.html' %}
+      {% include 'flashcards/components/notes.html' %}
+    </div>
+    <div class="right-topic">
+      <div class="topic-info">
+        <a href="{% %}"><div class="topic-info-name">{{ current_topic.topic_name }}</div></a>
+        <div class="topic-info-count">{{ current_topic.flashcard_set.count }} Flashcards</div>
+        <div class="topic-info-other">test</div>
+
+      </div>
+
+      {% include 'flashcards/important/flashcard_list.html' %}
+
+    </div>
+
+
+  </div>
+
+
+
+
+
+{% endblock content %}
