--- a/static/styles/important/topic.css
+++ b/static/styles/important/topic.css
@@ -22,7 +22,7 @@
 }
 
 .right-topic .topic-info {
-    background-color: #e81d1d;
+    background-color: #1b65c5;
     border-radius: 5px;
     padding: 5px;
     height: 2rem;
