--- a/static/styles/main_dark.css
+++ b/static/styles/main_dark.css
@@ -3,7 +3,7 @@
     /*For dark theme*/
     --search-form-light-background: rgba(120, 131, 155, 0.2);
     --logo-font-light-color: #fff;
-    --background-color: rgb(35, 39, 47);
+    --background-color: #141221;
     --text-color-light: #fff;
     --search-button-light-color: #000;
     --search-form-button-color: invert(100%);
