--- a/flashcard/templates/flashcards/important/topic_update.html
+++ b/flashcard/templates/flashcards/important/topic_update.html
@@ -6,9 +6,10 @@
 {% block content %}
 
   <div class="updateTopic-div">
+
+    <div>
     <form method="post">
       {% csrf_token %}
-      <input type="hidden" name="next" value="{{ request.GET.next }}">
       {% for field in forms %}
         <div class="form-group">
           <label for="thing-label">{{ field.label }}</label>
@@ -17,11 +18,6 @@
       {% endfor %}
       <input type="submit" value="Submit" class="update_topic">
     </form>
+    </div>
   </div>
-{% endblock content %}
-
-
-
-
-
 {% endblock content %}
