--- a/static/styles/important/topic_update.css
+++ b/static/styles/important/topic_update.css
@@ -4,6 +4,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+}
+
+.updateTopic-div form {
+    background-color: #0e3a77;
+    padding: 3rem;
+    border-radius: 5px;
 }
 
 .updateTopic-div div.form-group {
@@ -16,6 +23,7 @@
     width: 500px;
 
 }
+
 
 .updateTopic-div input.create_topic {
     background-color: #ffffff;
@@ -42,6 +50,33 @@
 }
 
 
-.updateTopic-div .update_topic:hover {
+
+.update_topic {
+    height: 40px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    font-family: inherit;
+    width: 80%;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+
+.update_topic:hover {
     cursor: pointer;
+}
+
+#id_subject {
+    height: 40px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #ffffff;
+    font-family: inherit;
+}
+
+#id_subject option {
+    font-size: 0.9rem;
+    border-radius: 5px;
+
 }
