--- a/flashcard/templates/flashcards/important/flashcard_list.html
+++ b/flashcard/templates/flashcards/important/flashcard_list.html
@@ -2,17 +2,27 @@
 <link rel="stylesheet" href="{% static 'styles/important/flashcard_list.css' %}">
 <div class="flashcard-list">
   <div class="flashcard">
+
     {% for flashcard in flashcards %}
       <a href="{% url 'flashcard' current_subject.id current_subject.id flashcard.id %}">
         <div class="flashcard-element">
           <div>
-            <p class="flashcard-name">{{ flashcard.question }}</p>
-
+            <p class="flashcard-name">{{ flashcard.question|slice:":20" }}...</p>
           </div>
-          <div class="date-updated">
-            <p>{{ flashcard.updates | timesince }}</p>
+          <div class="time-answer">
+          <div id="time">
+            <div>
+              <p class="lapses">{{ flashcard.lapses }}:{{ flashcard.average }}</p>
+            </div>
+            <div>
+              <p class="updated-time-since">{{ flashcard.updated|timesince }}</p>
+            </div>
           </div>
 
+          <div id="answer">
+            <p>{{ flashcard.answer|slice:":20" }}</p>
+          </div>
+          </div>
 
         </div>
       </a>
