--- a/static/styles/important/flashcard_list.css
+++ b/static/styles/important/flashcard_list.css
@@ -18,12 +18,88 @@
 
 }
 
-.flashcard-list .flashcard a .flashcard-element {
-    background-color: #e81d1d;
-    height: 150px;
+.flashcard-list .flashcard a {
+    background-color: #030e56;
+    height: 180px;
     padding: 1rem;
     border-radius: 10px;
-
-
+    min-width: 323px;
+    max-width: 323px;
+    overflow: hidden;
 
 }
+
+.flashcard-list .flashcard a .flashcard-element {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.flashcard-list .flashcard a .flashcard-element div p.flashcard-name {
+    transform: translateY(40px);
+    background-color: #ef2c3a;
+    transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+
+.flashcard-list .flashcard a .flashcard-element .time-answer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+
+.flashcard-list .flashcard a .flashcard-element .time-answer #time {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+
+}
+
+p.lapses {
+    font-size: 0.9rem;
+    transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+.flashcard-list .flashcard a .flashcard-element .time-answer #time div p.updated-time-since {
+    font-size: 0.7rem;
+    visibility: visible;
+    opacity: 1;
+    margin-right: 10px;
+    width: 50px;
+    transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+
+.flashcard-list .flashcard a .flashcard-element #answer {
+    background-color: #e81d1d;
+    transform: translateY(40px);
+    transition: transform 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+
+.flashcard-list .flashcard a:hover  .time-answer #time div p.updated-time-since {
+    transform: translateY(-30px);
+}
+
+
+.flashcard-list .flashcard a:hover .flashcard-element div p.flashcard-name {
+    transform: translateY(0px);
+}
+
+
+.flashcard-list .flashcard a:hover  p.lapses {
+    transform: translateY(-30px);
+}
+
+
+.flashcard-list .flashcard a:hover  #answer {
+    transform: translateY(0px);
+}
+
+
+
